[package]
name = "cimgui"
version = "0.1.0"
edition = "2021"
description = "High-level Rust bindings to dear imgui"
homepage = "https://github.com/imgui-rs/imgui-rs"
repository = "https://github.com/imgui-rs/imgui-rs"
documentation = "https://docs.rs/imgui"
license = "MIT OR Apache-2.0"
categories = ["gui", "api-bindings"]
readme = "../README.md"

exclude = ["/resources"]

[package.metadata.docs.rs]
# features = ["freetype", "docking", "tables-api"]

[dependencies]
bitflags = "1"
cimgui-sys = { path = "../cimgui-sys" }
mint = "0.5.6"
parking_lot = "0.12"
cfg-if = "1"

[features]
default = ["docking"]
# wasm = ["imgui-sys/wasm"]
# freetype = ["imgui-sys/freetype"]
# docking = ["imgui-sys/docking"]
docking = []
# # this api is in beta in the upstream imgui crate. See issue #524 for more info.
# # it should be stable and fine to use though.
# tables-api = []

[dev-dependencies]
approx = "0.5.1"
memoffset = "0.9"
pretty_assertions = "1.4.1"
